--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,26 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/portfolio/index.html">Portfolio</a></li>
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/articles/index.html">Articles</a>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/index.html">Home</a></li>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/portfolio/index.html">Portfolio</a></li>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/about/index.html">About</a></li>
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/resume/index.html">Resume</a>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/about/index.html">About</a></li>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/resume/index.html">Resume</a>
                     </li>
-                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/contact/index.html">Contact</a>
+                    <li
+                        class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -135,20 +147,42 @@
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png" alt="React.js"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://expressjs.com/" target="_blank" class="my-auto"><img src="../html/image/expressjs.jpg"
-                                alt="Express.js"
+                        <a href="https://expressjs.com/" target="_blank" class="my-auto"><img
+                                src="../html/image/expressjs.jpg" alt="Express.js"
                                 class="mx-auto my-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                     </div>
                     <h2 class="text-2xl py-2">Some things I've built...</h2>
                     <article class="py-10">
-                        <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
+                        <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capysocial.jpg" alt="Banking System Prototype II" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                <img src="./image/capyfinance.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
-                                <h3 class="text-xl text-teal-300 ">Reddit Clone Full Stack Web App</h3>
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Personal Finance Full Stack Web App </h3>
+                                </div>
+                                <p class="text-gray-400">This project is a full-stack web app written in Node Express,
+                                    React Vite and MongoDB
+                                    that
+                                    uses json web
+                                    token user authentication and allows users to create financial plans.</p>
+                                <p>Stack: Node, Express, React, ChartJS, Vite, MongoDB, Render</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article class="py-10">
+                        <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="./image/capysocial.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Reddit Clone Full Stack Web App </h3>
+                                </div>
                                 <p class="text-gray-400">This project is a full-stack web app written in Node Express,
                                     React Vite and MongoDB
                                     that
@@ -178,7 +212,8 @@
                     <article class="py-10">
                         <a href="./portfolio/portfolio6.html" class="md:flex">
                             <figure>
-                                <img src="./image/red_knight.jpg" alt="Banking System Prototype II" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                <img src="./image/red_knight.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">JavaScript RPG</h3>
@@ -194,15 +229,19 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
-                                        <img src="./image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                        <img src="./image/programming-languages.JPG" alt="ChatGPT"
+                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
-                                            <h2 class="text-xl text-teal-300">OOP, Procedural Programming, Data Structures and
+                                            <h2 class="text-xl text-teal-300">OOP, Procedural Programming, Data
+                                                Structures and
                                                 Algorithms</h2>
                                             <p>Posted on: August 7, 2023</p>
-                                            <p class="text-gray-400">It seems every ex-Google ex-Facebook ex-[insert FAANG name]
+                                            <p class="text-gray-400">It seems every ex-Google ex-Facebook ex-[insert
+                                                FAANG name]
                                                 tech influencer on
                                                 social
-                                                media has their own video on how to become a software developer nowadays.
+                                                media has their own video on how to become a software developer
+                                                nowadays.
                                             </p>
                                         </figcaption>
                                     </a>
@@ -211,11 +250,13 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article3.html" class="md:flex">
-                                        <img src="./image/chatgpt.jpg" alt="ChatGPT" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                        <img src="./image/chatgpt.jpg" alt="ChatGPT"
+                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">ChatGPT</h2>
                                             <p>Posted on: April 12, 2023</p>
-                                            <p class="text-gray-400">I'm going to start by being honest and declaring that I do
+                                            <p class="text-gray-400">I'm going to start by being honest and declaring
+                                                that I do
                                                 use chatGPT's or its
                                                 variants's
                                                 help on a regular basis when I develop software.</p>
@@ -234,7 +275,8 @@
                                             <p class="text-gray-400">I recently had the honor of becoming a certified
                                                 Professional Scrum Master I from
                                                 Scrum.org.
-                                                Since then, I onboarded on my first scrum project for an art gallery web app.
+                                                Since then, I onboarded on my first scrum project for an art gallery web
+                                                app.
                                             </p>
                                         </figcaption>
                                     </a>
