--- a/html/index.html
+++ b/html/index.html
@@ -35,17 +35,20 @@
                 <ul class="md:flex">
                     <li
                         class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
-                        <a href="../html/index.html">Home</a></li>
+                        <a href="../html/index.html">Home</a>
+                    </li>
                     <li
                         class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
-                        <a href="../html/portfolio/index.html">Portfolio</a></li>
+                        <a href="../html/portfolio/index.html">Portfolio</a>
+                    </li>
                     <li
                         class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                         <a href="../html/articles/index.html">Articles</a>
                     </li>
                     <li
                         class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
-                        <a href="../html/about/index.html">About</a></li>
+                        <a href="../html/about/index.html">About</a>
+                    </li>
                     <li
                         class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                         <a href="../html/resume/index.html">Resume</a>
@@ -226,6 +229,24 @@
                     <h2 class="text-2xl py-2">Some of my thoughts...</h2>
                     <div class=" py-2 md:flex max-w-6xl mx-auto">
                         <section>
+                            <article class="py-2">
+                                <figure>
+                                    <a href="./articles/article5.html" class="md:flex">
+                                        <img src="./image/web-frameworks.jpg" alt="ChatGPT"
+                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                        <figcaption class="md:pl-10">
+                                            <h2 class="text-xl text-teal-300">Frameworks, Modules and Packages</h2>
+                                            <p>Posted on: January 10, 2024</p>
+                                            <p class="text-gray-400">There's a lot of conflicting opinions among
+                                                engineers out there about the use of web frameworks,
+                                                modules
+                                                and
+                                                libraries.
+                                            </p>
+                                        </figcaption>
+                                    </a>
+                                </figure>
+                            </article>
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
