--- a/html/index.html
+++ b/html/index.html
@@ -105,7 +105,7 @@
         <main class="flex-1 max-w-7xl px-1 mx-auto">
             <div class="py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 flex-1">
-                    <div class="md:fixed top-28 z-30">
+                    <div class="md:fixed top-28 z-30 md:w-[250px] lg:w-fit">
                         <div class="flex">
                             <!-- <h1 class="flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font" id="paul">Hi,
                                 I'm
